<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/ranking_menu_item"
        android:title="@string/ranking"
        android:icon="@drawable/ic_baseline_emoji_events_24"
        app:showAsAction="ifRoom"/>
</menu>